# Rachel

./: .gitignore
Cpp/Increase/: .gitignore  CMakeLists.txt  Readme_vcpkg.txt  heart.cpp  main.cpp
Python/: GuessNumber.py  Point24.py  RandomNumber.py  RandomNumber2.py
Utils/cube/: cube_slice.py  cube_slice_non_web.py  cube_slice_web.py  requirements.txt
Utils/cube/templates/: home.html
Utils/demo-pages/: README.md  package-lock.json  package.json
Utils/practice-add/: README.md  package-lock.json  package.json
Utils/practice-add-complicated/: README.md  index.html  package-lock.json  package.json
Utils/practice-add-complicated.00/: package-lock.json  package.json  wrangler.toml
Utils/practice-add-complicated/src/: App.vue  index.js  main.js  router.js
Utils/practice-add-complicated/src/assets/: main.css
Utils/practice-add-complicated/src/components/: AddNumbers.vue  HomePage.vue  Multiply.vue  NumbersGenerator.vue
Utils/practice-add-complicated/src/layouts/: MainLayout.vue
Utils/practice-add-complicated/src/plugins/: vuetify.js
Utils/type-excellent/: README.md  package-lock.json  package.json
Utils/type-excellent/src/: App.vue  main.ts
Utils/type-excellent/src/components/: EvaluationPanel.vue  GobleConfig.vue  PracticePad.vue  TypingPanel.vue
Utils/type-excellent/src/router/: index.ts
Utils/type-excellent/src/views/: HomeView.vue
Utils/type-excellent/types/: vue-shims.d.ts
